--- a/item/templates/item/detail.html
+++ b/item/templates/item/detail.html
@@ -37,6 +37,7 @@
 
                         <div class="p-6 bg-white rounded-b-xl">
                             <h2 class="text-2xl">{{ item.name }}</h2>
+                            <p>Dog</p>
 
                             <p class="text-gray-500">Price: {{ item.price }}</p>
                         </div>
